--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,45 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m94334a6a-b3c4-4a2b-ae31-5c4bdaef2021\u001b[m\u001b[m/\r\n",
+      "\u001b[34mApplications\u001b[m\u001b[m/\r\n",
+      "\u001b[34mBox Sync\u001b[m\u001b[m/\r\n",
+      "\u001b[34mCreative Cloud Files\u001b[m\u001b[m/\r\n",
+      "\u001b[34mDesktop\u001b[m\u001b[m/\r\n",
+      "\u001b[34mDocuments\u001b[m\u001b[m/\r\n",
+      "\u001b[34mDownloads\u001b[m\u001b[m/\r\n",
+      "\u001b[34mLibrary\u001b[m\u001b[m/\r\n",
+      "MFN2_Part1.png\r\n",
+      "MFN2_Part2.png\r\n",
+      "MFN2_Part3.png\r\n",
+      "\u001b[34mMovies\u001b[m\u001b[m/\r\n",
+      "\u001b[34mMusic\u001b[m\u001b[m/\r\n",
+      "NCBI_SARS-CoV-2.fa\r\n",
+      "NCBI_SARS-CoV-2.fa.fai\r\n",
+      "\u001b[35mOneDrive - Washington University in St. Louis\u001b[m\u001b[m@\r\n",
+      "\u001b[34mPictures\u001b[m\u001b[m/\r\n",
+      "\u001b[34mPublic\u001b[m\u001b[m/\r\n",
+      "RP-2315_AC0025_v1_Exome_GCP.hs_metrics\r\n",
+      "\u001b[34mbashrc.d\u001b[m\u001b[m/\r\n",
+      "\u001b[34mbd0e9f28-8708-4288-9beb-79b59a91285b\u001b[m\u001b[m/\r\n",
+      "\u001b[34mbfx-workshop\u001b[m\u001b[m/\r\n",
+      "\u001b[34md293fe48-db49-41f0-8d19-1a5caa12721d\u001b[m\u001b[m/\r\n",
+      "\u001b[34mf2e01a48-b2a0-4af0-8aba-8ecdc8c1293e\u001b[m\u001b[m/\r\n",
+      "fast5.txt\r\n",
+      "\u001b[34mgit\u001b[m\u001b[m/\r\n",
+      "\u001b[34mgoogle-cloud-sdk\u001b[m\u001b[m/\r\n",
+      "\u001b[34migv\u001b[m\u001b[m/\r\n",
+      "\u001b[34mminiconda\u001b[m\u001b[m/\r\n",
+      "miniconda.sh\r\n",
+      "\u001b[34mopt\u001b[m\u001b[m/\r\n"
+     ]
+    }
+   ],
    "source": [
     "ls"
    ]
@@ -253,9 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\r\n"
+     ]
+    }
+   ],
    "source": [
     "!echo \"Hello World\""
    ]
@@ -354,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
