--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -163,7 +163,7 @@
     "From the terminal command line in the git repo directory, start a Jupyter Notebook. The following command should launch a browser window showing the contents of the repo. From there, you can launch *THIS* tutorial in an interactive browser session.\n",
     "\n",
     "```\n",
-    "juptyer notebook\n",
+    "jupyter notebook\n",
     "```\n",
     "\n",
     "NOTE: at this point, you can switch from the static GitHub"
