Update hw file links

--- a/lectures/week_10/python_vcf_parsing_and_filtering.ipynb
+++ b/lectures/week_10/python_vcf_parsing_and_filtering.ipynb
@@ -535,7 +535,7 @@
    "metadata": {},
    "source": [
     "# Homework\n",
-    "- Download the normal bams from here: https://www.dropbox.com/s/jhru5qu4bxcmfwq/normal.bam, https://www.dropbox.com/s/4gimazw35rcxr8x/normal.bam.bai\n",
+    "- Download the normal bams from here: gs://icts-precision-health-cromwell-wf-exec/inputs/normal.bam, gs://icts-precision-health-cromwell-wf-exec/inputs/normal.bam.bai\n",
     "- Calculate readcounts for the normal sample and add them to the `mutect.filtered.decomposed.pass_vaf_filtered.vcf.gz` file\n",
     "- Filter the output VCF from the above step to exclude variants where the normal VAF is higher than 0.02\n",
     "- Amend the TSV-creation script to also output the normal VAF on top of the other information\n",
