--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -122,6 +122,12 @@
     "\n",
     "```\n",
     "conda install r-essentials\n",
+    "```\n",
+    "\n",
+    "If the above command fails due to the package missing from existing channels, try again after adding conda-forge as a channel to pull packages from.\n",
+    "\n",
+    "```\n",
+    "conda config --append channels conda-forge\n",
     "```"
    ]
   },
@@ -405,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
