--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -41,10 +41,10 @@
    "source": [
     "## Software you'll need to have installed:\n",
     "\n",
-    "There are numerous ways to install Python, R, Notebooks, etc. In fact, you will see various ways of installing software and configuring your environment throughout the workshop. Each presenter and/or software toolkit may require or suggest a different approach. The Install sections below, ex. Miniconda, Jupyter, Git, R, JAVA, Docker, etc. are one list of requirements used to load, execute, and edit Jupyter Notebooks for completing some workshop tutorials on local compute devices, ie. Mac OS X laptop or other Unix/Linux OS personal device.   \n",
+    "There are numerous ways to install Python, R, Notebooks, etc. In fact, you will see various ways of installing software and configuring your environment throughout the workshop. Each presenter and/or software toolkit may require or suggest a different approach. The Install sections below (Miniconda, Jupyter, Git, R, JAVA, Docker, etc) will provide a solid foundation of tools that can be used for many workshop assignments.   \n",
     "\n",
     "### Windows\n",
-    "Following the steps below is not advised for Windows users as many of the Jupyter notebooks will not successfully run on the windows environment. To circumvent this it is recommended to use a Linux based approach. The course has been tested using Ubuntu. [Follow these instructions](https://wustl.box.com/s/atjrz45e03gk8ks8mhdebkbz7b4ho70y)"
+    "Following the steps below as written is not advised for Windows users as many of the Jupyter notebooks will not successfully run on the windows environment. To circumvent this it is recommended to use a Linux based approach. The course has been tested using MacOSX and/or Ubuntu linux. You can [follow these instructions](https://wustl.box.com/s/atjrz45e03gk8ks8mhdebkbz7b4ho70y) to get linux (via WSL) running on your device." Also see the #bfx-workshop-windows-setup channel on slack for help.
    ]
   },
   {
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "### Miniconda\n",
-    "Conda is a package manager that works on Windows, Linux, and macOS. We will use a lightweight version of the package manager called Miniconda to install packages and manage the system environment. This tool should help minimize dependencies and differences in system-level libraries or operatings system across the participants in the BFX Workshop.\n",
+    "Conda is a package manager that works on Windows, Linux, and macOS. We will use a lightweight version of the package manager called Miniconda to install packages and manage the system environment. This tool should help minimize dependencies and differences in system-level libraries across the participants in the BFX Workshop.\n",
     "\n",
     "Available installers for Miniconda can be found [here](https://docs.conda.io/en/latest/miniconda.html#miniconda) through the official Conda project documentation. NOTE: Please choose the latest version of Python, ex. 3.11, although some users may already be using Python 3.9 or 3.8. Ignore Python 2 installers and please update existing Python 2 installs.  On a mac, you will need to choose an Installer appropriate for your Mac chipset, ex. Intel x86 vs. Apple M1 architecture.\n",
     "\n",
@@ -71,7 +71,7 @@
    "metadata": {},
    "source": [
     "### Jupyter\n",
-    "Jupyter is a web-based interactive computing platform that allows users to create and run \"notebooks\" that mix code and data. We'll be exploring this in future workshops, but for now, just get it set up. Other installation methods will work, but for the sake of simplicity, we will install using conda like so:\n",
+    "Jupyter is a web-based interactive computing platform that allows users to create and run \"notebooks\" that mix code and data. We'll be exploring some details below (and in future workshops), but for now, just get it set up. Other installation methods will work, but for the sake of simplicity, we will install using conda like so:\n",
     "\n",
     "```\n",
     "conda install jupyter\n",
@@ -95,7 +95,7 @@
    "metadata": {},
    "source": [
     "### Docker\n",
-    "Docker is a system that allows you to launch \"containers\" on your computer that contain alternate operating systems and all the dependencies for specific tools. We'll discuss this in detail during the course. For complete and updated instructions for installing Docker for Mac, please see this [link](https://docs.docker.com/docker-for-mac/install/).\n",
+    "Docker is a system that allows you to launch \"containers\" on your computer that contain alternate operating systems and all the dependencies for specific tools. We'll discuss this in detail during the course. For complete and updated instructions for installing Docker for Mac, please see this [link](https://docs.docker.com/docker-for-mac/install/). That page's sidebar contains links to Linux or Windows/WSL instructions\n",
     "\n",
     "Once it's installed, launch the docker app (if it isn't already running), and then confirm that it's installed using:\n",
     "\n",
@@ -115,7 +115,7 @@
    "metadata": {},
    "source": [
     "### Java\n",
-    "Java is required to use the Integrated Genomics View (IGV) locally on your workstation or laptop. Please see the operating system install instructions for Java located [here](https://www.java.com/en/download/help/download_options.xml).\n"
+    "Java is required to use the Integrated Genomics Viewer (IGV) locally on your workstation or laptop. Please see the operating system install instructions for Java located [here](https://www.java.com/en/download/help/download_options.xml).\n"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "source": [
     "### R\n",
     "\n",
-    "We'll be using the R Studio framework in most of our sessions that involve creating and running R code. Please follow the instructions for [installing R and R Studio here](https://posit.co/download/rstudio-desktop/)"
+    "We'll be using the R Studio framework in most sessions that involve creating and running R code. Please follow the instructions for [installing R and R Studio here](https://posit.co/download/rstudio-desktop/)"
    ]
   },
   {
@@ -170,9 +170,7 @@
     "\n",
     "First we should navigate on the filesytem, using `cd`, to the directory where we cloned the course repository.\n",
     "\n",
-    "A list, or `ls`, of the directory should show a `README.md` file and an `images` directory and perhaps several `*.ipynb` files.\n",
-    "\n",
-    "NOTE: What does the `*` character represent above?\n",
+    "A list, or `ls`, of the directory should show at least a `README.md` file and an `lectures` directory.\n",
     "\n",
     "From the terminal command line in the git repo directory, start a Jupyter Notebook. The following command should launch a browser window showing the contents of the repo. \n",
     "\n",
@@ -335,7 +333,7 @@
    "source": [
     "## Compute and Storage Access\n",
     "\n",
-    "Almost all of the modules in this course will be able to be run on your local computer, using small data sets.  Most will also be able to be run on the local high-performance cluster or cloud as well. These resources are not required, but worth becoming familiar with, especially as you begin to extend your knowledge to running tools on your own, probably much larger data sets, these resources may help:\n",
+    "Almost all of the modules in this course will be able to be run on your local computer, using small data sets.  Most will be able to be run on the local high-performance cluster or cloud as well. These resources are not required, but worth becoming familiar with, especially as you begin to extend your knowledge to running tools on your own (probably much larger) data sets:\n",
     "\n",
     "### Google Cloud\n",
     "\n",
@@ -397,7 +395,7 @@
    "source": [
     "###  LSF and Docker information\n",
     "\n",
-    "Working through this [LSF and Docker tutorial](https://gist.github.com/chrisamiller/4b17a8dd310374f078da2bf12b3e2a49) might prove useful in conjunction with this week's homework."
+    "If you're in a hurry to get started on the cluster or with Docker images, working through this [LSF and Docker tutorial](https://gist.github.com/chrisamiller/4b17a8dd310374f078da2bf12b3e2a49) might prove useful."
    ]
   },
   {
@@ -408,7 +406,7 @@
     "\n",
     "Please attempt the following exercises on your own and post questions to the ICTS Precision Health [#bfx-workshop](https://ictsprecisionhealth.slack.com/archives/C040Q704WS2) Slack channel.\n",
     "\n",
-    "1. Install and/or confirm installation of Prerequisites\n",
+    "1. Install and/or confirm installation of the above prerequisites\n",
     "2. Drop into the #bfx-workshop slack channel and introduce yourself!"
    ]
   }
