minor edits to prereqs

--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -41,10 +41,9 @@
    "source": [
     "## Software you'll need to have installed:\n",
     "\n",
-    "There are numerous ways to install Python, R, Notebooks, etc. In fact, you will see various ways of installing software and configuring your environment throughout the workshop. Each presenter and/or software toolkit may require or suggest a different approach. The Install sections below (Miniconda, Jupyter, Git, R, JAVA, Docker, etc) will provide a solid foundation of tools that can be used for many workshop assignments.   \n",
-    "\n",
+    "There are numerous ways to install Python, R, Notebooks, etc. In fact, you will see various ways of installing software and configuring your environment throughout the workshop. Each presenter and/or software toolkit may require or suggest a different approach. The Install sections below, ex. Miniconda, Jupyter, Git, R, JAVA, Docker, etc. are one list of requirements used to load, execute, and edit Jupyter Notebooks for completing some workshop tutorials on local compute devices, ie. Mac OS X laptop or other Unix/Linux OS personal device.\n",
     "### Windows\n",
-    "Following the steps below as written is not advised for Windows users as many of the Jupyter notebooks will not successfully run on the windows environment. To circumvent this it is recommended to use a Linux based approach. The course has been tested using MacOSX and/or Ubuntu linux. You can [follow these instructions](https://wustl.box.com/s/atjrz45e03gk8ks8mhdebkbz7b4ho70y) to get linux (via WSL) running on your device." Also see the #bfx-workshop-windows-setup channel on slack for help.
+    "The lingua franca of bioinformatics is Unix command line tools, and the course has been tested using MacOSX and/or Ubuntu linux. If your computer runs windows, you can [follow these instructions](https://wustl.box.com/s/atjrz45e03gk8ks8mhdebkbz7b4ho70y) to get linux (via WSL) running on your device.\" Also see the #bfx-workshop-windows-setup channel on slack for help."
    ]
   },
   {
@@ -71,7 +70,7 @@
    "metadata": {},
    "source": [
     "### Jupyter\n",
-    "Jupyter is a web-based interactive computing platform that allows users to create and run \"notebooks\" that mix code and data. We'll be exploring some details below (and in future workshops), but for now, just get it set up. Other installation methods will work, but for the sake of simplicity, we will install using conda like so:\n",
+    "Jupyter is a web-based interactive computing platform that allows users to create and run \"notebooks\" that mix code and data. We'll be exploring some details below (and in future workshop sessions), but for now, just get it set up. Other installation methods will work, but for the sake of simplicity, we will install using conda like so:\n",
     "\n",
     "```\n",
     "conda install jupyter\n",
@@ -95,7 +94,7 @@
    "metadata": {},
    "source": [
     "### Docker\n",
-    "Docker is a system that allows you to launch \"containers\" on your computer that contain alternate operating systems and all the dependencies for specific tools. We'll discuss this in detail during the course. For complete and updated instructions for installing Docker for Mac, please see this [link](https://docs.docker.com/docker-for-mac/install/). That page's sidebar contains links to Linux or Windows/WSL instructions\n",
+    "Docker is a system that allows you to launch \"containers\" on your computer that contain alternate operating systems and all the dependencies for specific tools. We'll discuss this in detail during the course. For complete and updated instructions for installing Docker for Mac, please see this [link](https://docs.docker.com/docker-for-mac/install/). That page's sidebar also contains links to Linux or Windows/WSL instructions\n",
     "\n",
     "Once it's installed, launch the docker app (if it isn't already running), and then confirm that it's installed using:\n",
     "\n",
@@ -333,7 +332,7 @@
    "source": [
     "## Compute and Storage Access\n",
     "\n",
-    "Almost all of the modules in this course will be able to be run on your local computer, using small data sets.  Most will be able to be run on the local high-performance cluster or cloud as well. These resources are not required, but worth becoming familiar with, especially as you begin to extend your knowledge to running tools on your own (probably much larger) data sets:\n",
+    "Almost all of the modules in this course will be able to be run on your local computer, using small data sets.  Most will also be able to be run on the local high-performance cluster or cloud. These resources are not required right now, but worth becoming familiar with, especially as you begin to extend your knowledge to running tools on your own (probably much larger) data sets.\n",
     "\n",
     "### Google Cloud\n",
     "\n",
@@ -387,27 +386,6 @@
     "If you have access, but are unsure how to connect to compute1, please see this [link](https://confluence.ris.wustl.edu/display/ITKB/Compute+Quick+Start#ComputeQuickStart-1.GettingConnected). \n",
     "\n",
     "NOTE: The above link is only accessible from within WUSM's network.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###  LSF and Docker information\n",
-    "\n",
-    "If you're in a hurry to get started on the cluster or with Docker images, working through this [LSF and Docker tutorial](https://gist.github.com/chrisamiller/4b17a8dd310374f078da2bf12b3e2a49) might prove useful."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Homework Assignment\n",
-    "\n",
-    "Please attempt the following exercises on your own and post questions to the ICTS Precision Health [#bfx-workshop](https://ictsprecisionhealth.slack.com/archives/C040Q704WS2) Slack channel.\n",
-    "\n",
-    "1. Install and/or confirm installation of the above prerequisites\n",
-    "2. Drop into the #bfx-workshop slack channel and introduce yourself!"
    ]
   }
  ],
