Revert "github bugfix"
This reverts commit e929e9906e1a126ddf4b6d92fb1ea9af67ac788e.

--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -153,8 +153,10 @@
     "\n",
     "![Example GitHub Clone/Download Code](https://github.com/genome/bfx-workshop/raw/master/archive/v2020-2021/images/github_clone_repo.png)\n",
     "\n",
-    "NOTE: Click the "Code" button, and you may get options that include HTTPS and SSH. It is easiest to use HTTPS to clone the class git repo, using a command like:  `git clone https://github.com/genome/bfx-workshop.git`",
+    "NOTE: You have the option of using either HTTPS or SSH to clone the class git repo. Below is an example of using SSH.\n",
     "\n",
+    "![Example Git Clone Commmand](https://github.com/genome/bfx-workshop/raw/master/archive/v2020-2021/images/github_clone_cmd.png)\n",
+    "\n"
    ]
   },
   {
