github clone fix

--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -153,10 +153,7 @@
     "\n",
     "![Example GitHub Clone/Download Code](https://github.com/genome/bfx-workshop/raw/master/archive/v2020-2021/images/github_clone_repo.png)\n",
     "\n",
-    "NOTE: You have the option of using either HTTPS or SSH to clone the class git repo. Below is an example of using SSH.\n",
-    "\n",
-    "![Example Git Clone Commmand](https://github.com/genome/bfx-workshop/raw/master/archive/v2020-2021/images/github_clone_cmd.png)\n",
-    "\n"
+    "NOTE: Pull down the \"Code\" button to get the path of the class repository. Then use `git clone PATH` (replacing PATH) to grab your copy.\n"
    ]
   },
   {
